Update Parse Learning findall() function

--- a/parse/learning_parse.ipynb
+++ b/parse/learning_parse.ipynb
@@ -273,6 +273,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tom Ken Ham\n",
+      "['Tom', 'Ken', 'Ham']\n",
+      "['0', '1', '2']\n",
+      "['22', '23', '28']\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"student id:0, name:Tom, age:22, student id:1, name:Ken, age:23, student id:2, name:Ham, age:28,\"\n",
+    "\n",
+    "print(' '.join(s[0] for s in findall(\"name:{},\",text)))\n",
+    "\n",
+    "print(' '.join(s[0] for s in findall(\"name:{},\",text)).split(' '))\n",
+    "print(' '.join(s[0] for s in findall(\"id:{},\",text)).split(' '))\n",
+    "print(' '.join(s[0] for s in findall(\"age:{},\",text)).split(' '))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -305,6 +331,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
