--- a/eval/eval.ipynb
+++ b/eval/eval.ipynb
@@ -127,6 +127,34 @@
     "name = \"Allen\"\n",
     "print(eval(\"{'Student': name, 'score': score}\", {'score': 99}, locals()))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "输入格:__import__('os').system('dir') \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t = input(\"输入格:\")\n",
+    "eval(t)"
+   ]
   }
  ],
  "metadata": {
